# RebelSDK

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct
.github/workflows/: build-tests.yaml  style-tests.yaml  update-headers.yaml
include/api/: gdnative_api_struct.gen.h
include/classes/: AESContext.hpp  AcceptDialog.hpp  AnimationPlayer.hpp  BakedLightmap.hpp  ClassDB.hpp  CollisionObject2D.hpp  ColorPicker.hpp  ColorPickerButton.hpp  Control.hpp  Crypto.hpp  EditorSceneImporter.hpp  EditorSpatialGizmoPlugin.hpp  EditorSpinSlider.hpp  Engine.hpp  Environment.hpp  FileSystemDock.hpp  GLTFAccessor.hpp  GLTFAnimation.hpp  GLTFCamera.hpp  GLTFSkeleton.hpp  GLTFState.hpp  GlobalConstants.hpp  GraphEdit.hpp  GraphNode.hpp  HTTPRequest.hpp  IP.hpp  Input.hpp  InputEvent.hpp  InputEventKey.hpp  InputMap.hpp  JavaScript.hpp  JavaScriptObject.hpp  KinematicBody2D.hpp  KinematicCollision.hpp  KinematicCollision2D.hpp  Light.hpp  Listener2D.hpp  MeshLibrary.hpp  NoiseTexture.hpp  OS.hpp  (+683 more)
include/common/: aabb.h  array.h  basis.h  cameramatrix.h  color.h  commontypes.h  defs.h  dictionary.h  factory.h  functionprofiling.h  nodepath.h  plane.h  poolarrays.h  quat.h  rebel.h  rebelglobal.h  rebelmath.h  rect2.h  ref.h  rid.h  string.h  tagdb.h  transform.h  transform2d.h  variant.h  vector2.h  vector3.h  wrapped.h
samples/DancingSprite/: DancingSprite.cbp  project.rebel
samples/HelloWorld/: .gitignore  Control.gd  Control.tscn  export_presets.cfg  project.rebel
samples/Simple/: .gitignore  (+2 more)
tools/: build.py  create_classes_code_from_json.py
(+797 files in other folders)
